freedreno: mis-rendering on gardensofkadesh/homeworld
webasm version of homeworld: https://gardensofkadesh.github.io/
GALLIUM_THREAD=0
"fixes" problem, so could be an app bug (ie. improper DISCARD or UNSYNCHRONIZED usage?)
Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
webasm version of homeworld: https://gardensofkadesh.github.io/
GALLIUM_THREAD=0
"fixes" problem, so could be an app bug (ie. improper DISCARD or UNSYNCHRONIZED usage?)